<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@id/about_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/about_title"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/rectangulo"
        android:layout_width="452dp"
        android:layout_height="89dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangulo"
        android:backgroundTint="@color/teal_200"
        tools:ignore="MissingConstraints" />

    <include
        layout="@layout/activity_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/description" />

    <include layout="@layout/activity_date" />

    <TextView
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/date_about"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_margin="25dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/experience_card"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/experience_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center|top"
                android:layout_margin="5dp"
                android:contentDescription="@string/card_experience"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/experience_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/card_experience"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/background_card"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/background_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center|top"
                android:layout_margin="5dp"
                android:contentDescription="@string/card_background"
                android:src="@drawable/ic_image" />

            <TextView
                android:id="@+id/background_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/card_background"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/interest_card"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/interest_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center|top"
                android:layout_margin="10dp"
                android:contentDescription="@string/card_interest"
                android:src="@drawable/ic_favorite" />

            <TextView
                android:id="@+id/interest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/card_interest"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/portfolio_card"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/portfolio_img"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:contentDescription="@string/card_portafolio"
                android:src="@drawable/destello" />

            <TextView
                android:id="@+id/portfolio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/card_portafolio"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>



        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>